fixed the overflow, added text

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,10 @@
+#lvlNum {
+	font-size: 15px;
+}
 
+#myBar{
+    overflow: hidden;
+}
 
 .footer {
     
